--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-spring.mail.host=smtp.mailtrap.io
-spring.mail.port=2525
-spring.mail.username=61a327544445b0
-spring.mail.password=3aaf5c8f4e44b6
-#spring.mail.properties.mail.smtp.auth=true
+spring.mail.host=smtp.office365.com
+spring.mail.port=587
+spring.mail.username=connectips@nchl.com.np
+spring.mail.password=Mc!ps$$2018
+spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
